--- a/src/assets/CustomStyles.css
+++ b/src/assets/CustomStyles.css
@@ -10,3 +10,17 @@
 .NoPadding {
     padding: 0px !important;
 }
+
+.tooltip {	
+    position: absolute;			
+    text-align: center;			
+    width: 80px;					
+    height: 40px;					
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: lightgrey;	
+    color: black;
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;			
+}
